@@ -1,12 +1,8 @@
 package steve_gall.minecolonies_compatibility.module.common.collectorsreap;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-
-import org.jetbrains.annotations.NotNull;
-
 import net.brdle.collectorsreap.common.block.FruitBushBlock;
 import net.minecraft.core.BlockPos;
 import net.minecraft.resources.ResourceLocation;
@@ -20,6 +16,7 @@ import net.minecraftforge.registries.ForgeRegistries;
 import steve_gall.minecolonies_compatibility.api.common.plant.CustomizedFruit;
 import steve_gall.minecolonies_compatibility.api.common.plant.HarvesterContext;
 import steve_gall.minecolonies_compatibility.api.common.plant.PlantBlockContext;
+import org.jetbrains.annotations.NotNull;
 
 public class FruitBushFruit extends CustomizedFruit
 {
@@ -30,16 +27,13 @@ public class FruitBushFruit extends CustomizedFruit
 	public FruitBushFruit(FruitBushBlock block)
 	{
 		this.block = block;
-		this.blockIcons = Arrays.asList(new ItemStack(block.getSeeds()));
+		this.blockIcons = List.of(new ItemStack(block.getSeeds()));
 
 		var itemIcons = new ArrayList<ItemStack>();
 		itemIcons.add(new ItemStack(block.getFruit()));
 
-		var special = block.getSpecialFruit();
-
-		if (!special.isEmpty())
-		{
-			itemIcons.add(special.copy());
+		if (block.hasSpecialFruit()) {
+			block.getSpecialFruit().ifPresent(special -> itemIcons.add(new ItemStack(special)));
 		}
 
 		this.itemIcons = itemIcons;
@@ -122,15 +116,15 @@ public class FruitBushFruit extends CustomizedFruit
 
 		if (this.block.isSpecial(level, pos))
 		{
-			stack = this.block.getSpecialFruit().copy();
+			stack = new ItemStack(block.getSpecialFruit().get());
 		}
 		else
 		{
-			var additional = level.getRandom().nextIntBetweenInclusive(1, 2);
-			stack = new ItemStack(this.block.getFruit(), this.block.getNumFruit(additional));
+			final int count = level.getRandom().nextIntBetweenInclusive(1, 1 + this.block.getMaxBonus());
+			stack = new ItemStack(this.block.getFruit(), count);
 		}
 
-		return Arrays.asList(stack);
+		return List.of(stack);
 	}
 
 }
